preference-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: "2023-03-19T08:42:11Z"
  generation: 3
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        .: {}
        f:hosts: {}
    manager: kubectl-create
    operation: Update
    time: "2023-03-19T08:42:11Z"
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:http: {}
    manager: kubectl-edit
    operation: Update
    time: "2023-03-19T08:48:49Z"
  name: preference-vs
  namespace: resilience-retry
  resourceVersion: "799629"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/resilience-retry/virtualservices/preference-vs
  uid: ba518ae5-f5da-40ce-bb86-ddad34c9c7c9
spec:
  hosts:
  - preference
  http:
  - retries:
      attempts: 100
      perTryTimeout: 2s
      retryOn: 5xx
    route:
    - destination:
        host: preference
        port:
          number: 8080
